2007-10-31  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.*: Improvements to the ribbon
	code so that it caches the chain and updates it if the molecule is
	changed.

2007-10-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.cpp: Improve the ribbon engine
	to render multiple chains correctly and not crash when there is no
	chain.

2007-10-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,
	libavogadro/src/povpainter.h: Modified the drawSpline signature to use
	QVector and take a radius.

	* libavogadro/src/glpainter.cpp: Added the necessary code to draw a
	cubic spline. Uses cylinder right now - this needs improving to fix
	the discontinuities.

	* libavogadro/src/engines/ribbonengine.cpp: Find the CA atoms that
	make up the backbone of the biological structures. Then draw this back
	bone as a cubic spline tube.

2007-10-17  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.cpp: Added routine to pick out
	the CA atoms of the residue backbone. Draw cylinders between the CA
	atoms. Next step is to draw a smoothed tube between them.

2007-08-20  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/tools/glwidget.*: Added the computeClickedPrimitive/
	Atom/Bond functions to the GLWidget class as these functions have been 
	used in	several tools and are quite generic. Fixed regression with bond
	picking.
	
	* libavogadro/src/tools/manipulatetool.*,
	libavogadro/src/tools/bondcentrictool.*,
	libavogadro/src/tools/navigatetool.*: Ported to use the new 
	computeClicked*	functions in GLWidget and removed the local
	implementations of them.

2007-08-19  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/tools/navigate.*: Added a new navigation class with
	static member functions to perform the navigation functions common to
	three tools right now and possibly more in future.

	* libavogadro/src/tools/CMakeLists.txt,