@@ -66,6 +66,16 @@
      </item>
      <item>
       <property name="text" >
+       <string>Residue name</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
+       <string>Residue number</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
        <string>None</string>
       </property>
      </item>
@@ -99,7 +109,7 @@
       </size>
      </property>
      <property name="currentIndex" >
-      <number>1</number>
+      <number>2</number>
      </property>
      <property name="modelColumn" >
       <number>0</number>
@@ -107,6 +117,11 @@
      <item>
       <property name="text" >
        <string>Bond number</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
+       <string>Bond order</string>
       </property>
      </item>
      <item>
