@@ -1,3 +1,9 @@
+2007-11-01  Marcus D. Hanwell <marcus@cryos.org>
+	* libavogadro/src/engines/labelengine.cpp,
+	libavogadro/src/engines/labelsettingswidget.ui: Updated the label
+	engineto label atoms by residue name and number and bonds by their
+	order. Feature request 1820686 and 1824338.
+
 2007-10-31  Marcus D. Hanwell <marcus@cryos.org>
 	* libavogadro/src/engines/ribbonengine.*: Improvements to the ribbon
 	code so that it caches the chain and updates it if the molecule is
